# agents

./: CLAUDE.md  README.md
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb
1_foundations/community_contributions/: 3_lab3_azure_open_ai.ipynb  Anirban_lab1-solution_day1.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/community_contributions/: 2_lab2_with_graph_visualization.ipynb  2_lab2_with_resend_email.ipynb  2_lab2nextday.ipynb  2_lab_2_sales_manager_handover_instructions.ipynb
3_crew/debate2/: README.md  pyproject.toml
3_crew/debate2/output/: decision.md  oppose.md  propose.md
3_crew/debate2/src/debate2/: crew.py  main.py
3_crew/debate2/src/debate2/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher2/: README.md  pyproject.toml  report.md
3_crew/financial_researcher2/output/: report.md
3_crew/financial_researcher2/src/financial_researcher2/: crew.py  main.py
3_crew/financial_researcher2/src/financial_researcher2/config/: agents.yaml  tasks.yaml
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  banoffee-page-snapshot.md  banoffee-snapshot.md  banoffee_snapshot.md  market.py
6_mcp/.playwright-mcp/: page-2026-04-08T06-28-19-235Z.yml  page-2026-04-08T06-28-37-877Z.yml  page-2026-04-08T06-43-36-305Z.yml  page-2026-04-08T06-43-43-737Z.yml  (+5 more)
guides/: 08_debugging.ipynb
setup/: SETUP-PC.md  SETUP-linux.md  SETUP-mac.md  diagnostics.py  troubleshooting.ipynb
(+48 files in other folders)
