[project]
name = "debate2"
version = "0.1.0"
description = "debate2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
debate2 = "debate2.main:run"
run_crew = "debate2.main:run"
train = "debate2.main:train"
replay = "debate2.main:replay"
test = "debate2.main:test"
run_with_trigger = "debate2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
